# QtOllamaFrontend

./: .clang-format  .gitignore  AI_create_files_qml_refactor.sh  CMakeLists.txt
qml/: CustomButton.qml  CustomCheckBoxTextField.qml  CustomCheckBoxTextFieldBoolean.qml  CustomCheckBoxTextFieldDouble.qml  CustomCheckBoxTextFieldInteger.qml  CustomComboBox.qml  CustomLabel.qml  CustomTextArea.qml  CustomTextField.qml  DialogAbout.qml  DialogAddModel.qml  DialogExportMessages.qml  DialogImage.qml  DialogModel.qml  DialogModelOptions.qml  DialogModelSettings.qml  DialogNewChat.qml  DialogPullModel.qml  DialogSelectModel.qml  DialogService.qml  DialogTextToSpeech.qml  Main.qml  MainMinimal.qml  MainMinimalKirigami.qml
resources/: resources.qrc
src/: cli.cpp  databasecomponent.cpp  databasecomponent.h  main.cpp  qtollamafrontend.cpp  qtollamafrontend.h
